tests/vendor/valid/trivial/unop_add.c
//expect 0
//tags: trivial, unary, binary
int main(void) {
    return ~2 + 3;
}