tests/vendor/invalid/syntax/invalid_function_name.c
//tags: trivial
int 3 (void) {
    return 0;
}